--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- logo -->
       <a href="#" class="navbar__logo">
         <i class='bx bx-shopping-bag navbar__logo-icon'></i>
-        <span class="navbar__logo-text animate__animated animate__flash">Shopping</span>
+        <span class="navbar__logo-text animate__animated animate__flash">Lenovo Shopping</span>
       </a>
 
       <!-- navegación -->
@@ -32,10 +32,10 @@
             <a href="index.html" class="navbar__link">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="#footer" class="navbar__link">About</a>
+            <a href="#about" class="navbar__link">About</a>
           </li>
           <li class="navbar__item">
-            <a href="contact.html" class="navbar__link">Contact</a>
+            <a href="#" class="navbar__link">Contact</a>
           </li>
         </ul>
       </nav>
@@ -55,7 +55,7 @@
       <div class="about__content">
         <h1 class="about__title">About Us</h1>
         <p class="about__text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quidem, quisquam.
+          En Lenovo, la innovación no es sólo lo que hacemos, sino que forma parte de nuestro ADN.
         </p>
       </div>
     </div>
@@ -97,7 +97,6 @@
       </div>
     </aside>
   </main>
-
   <footer id="footer" class="footer">
     <div class="footer__copy">
       <p class="footer__copy-text">
